# LearnMachineLearning

./: .gitmodules  Gluon_linear_regression.ipynb  Iris MxNet.ipynb  LICENSE  README.md  random_forests.ipynb
cpp/iris_mxnet/: CMakeLists.txt  iris_mxnet.cpp  iris_train_data.csv  reader.cpp
cpp/mlp_cpu/: CMakeLists.txt  iris_mxnet.cpp  iris_test_data.csv  iris_test_label.csv  iris_train_label.csv  mlp.cpp  mlp.hpp
notebooks/: random_forests.ipynb
notebooks/Aureliene_book_9781492032649/: Keras-BatchNormalization.ipynb  Keras-MLP.ipynb  ML_Refresher - Linear regression - Closed form - Synth data.ipynb  ML_Refresher - Linear regression - Early stopping - Synth data.ipynb  ML_Refresher - Linear regression - Polynomial Features - Synth data.ipynb  ML_Refresher - Linear regression - SGD - Synth data.ipynb  ML_Refresher - Tensorflow - Keras  - Tensorboard - Regression - Functional API - California housing.ipynb  ML_Refresher - Tensorflow - Keras - Classification - Sequential API - MNIST Fashion.ipynb  ML_Refresher - Tensorflow - Keras - Regression - Sequential - California hosing.ipynb  README.md  README.md.tex  environment.yml  utils.py
notebooks/RNNs/: Sequential_AutoRegression.ipynb
notebooks/keras/: Keras_conv_cats_dogs.ipynb  Keras_mnist.ipynb  Keras_mnist_conv.ipynb
notebooks/keras/.ipynb_checkpoints/: Keras_mnist-checkpoint.ipynb
notebooks/pandas/: Data loading with Pandas.ipynb
notebooks/reinforcement_learning/: Introduction to OpenAI Gym.ipynb  Introduction to PyTorch.ipynb  OpenAI-Gym-CartPole-v0-Simulated-Annealing.ipynb  pytorch_model.ipynb  rl.yml
notebooks/reinforcement_learning/pong/: CMakeLists.txt  README.md  actorcriticagent.py  actorcriticagent2.py  cartpole.py  game.hpp  main.cpp  pgagent.py  pong.py  pong_python.cpp  rl.py  sdl.hpp  sdl_main.cpp
python/: autodiff.py  basednn.py  googlenet_inspired.py  main.py  tf.yml  vgg_custom_train_loop.py  vgg_inspired.py  vgg_residual.py  vgg_residual_2outputs.py  vgg_residual_subclassing.py
